# aoc-2024

./: .gitignore  CMakeLists.txt  README.md
cmake/: Catch2.cmake
inputs/: CMakeLists.txt
src/: utils.cc  utils.hpp
tests/: CMakeLists.txt  day1.cc  day10.cc  day11.cc  day12.cc  day13.cc  day14.cc  day15.cc  day16.cc  day2.cc  day3.cc  day4.cc  day5.cc  day6.cc  day7.cc  day8.cc  day9.cc  filereadtest.cc
