file(GLOB TEST_FILES ${CMAKE_SOURCE_DIR}/*.cc ${CMAKE_SOURCE_DIR}/*.cpp)
foreach(TEST_P ${TEST_FILES})
    cmake_path(GET TEST_P FILENAME filename)
    cmake_path(GET filename STEM exename)
    set_source_files_properties(TEST_P PROPERTIES LANGUAGE CXX)
    target_compile_features(TEST_P PRIVATE cxx_std_20)
    CompileTestFile(${exename} ${TEST_P})
    target_link_libraries(${exename} PRIVATE ${aoc_lib})
endforeach()
