file(GLOB TEST_FILES ${CMAKE_SOURCE_DIR}/tests/*.cc ${CMAKE_SOURCE_DIR}/tests/*.cpp)
foreach(TEST_P ${TEST_FILES})
    cmake_path(GET TEST_P FILENAME filename)
    cmake_path(GET filename STEM exename)
    set_source_files_properties(TEST_P PROPERTIES LANGUAGE CXX)
    CompileTestFile(${exename} ${TEST_P})
    target_compile_features(${exename} PRIVATE cxx_std_20)
    target_link_libraries(${exename} PRIVATE ${aoc_lib})
    file(TOUCH ${PROJECT_SOURCE_DIR}/inputs/${exename}.in)
endforeach()
